--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -140,20 +140,22 @@ jobs:
       - name: Build Xen
         shell: bash
         run: |
-            echo CONFIG_EXPERT=y > xen/xen/.config && \
-                echo CONFIG_MEM_SHARING=y >> xen/xen/.config && \
-                ./xen/configure --disable-pvshim --enable-systemd --enable-githttp && \
-                make -C xen/xen olddefconfig && \
-                make -C xen -j$(nproc) dist-xen && \
-                make -C xen -j$(nproc) dist-tools && \
-                sudo make -C xen -j$(nproc) install-xen && \
-                sudo make -C xen -j$(nproc) install-tools
-            mkdir -p xen/dist/install/etc/ld.so.conf.d/ && \
-                echo "/usr/local/lib" > xen/dist/install/etc/ld.so.conf.d/xen.conf
-            cp xen/tools/misc/xen-vmtrace xen/dist/install/usr/local/sbin
-            mkdir -p /xen-debs/ && \
-                make -C xen -j$(nproc) debball && \
-                mv xen/dist/*.deb /xen-debs/
+            pushd xen && \
+                echo CONFIG_EXPERT=y > xen/.config && \
+                echo CONFIG_MEM_SHARING=y >> xen/.config && \
+                ./configure --disable-pvshim --enable-systemd --enable-githttp && \
+                make -C xen olddefconfig && \
+                make -j$(nproc) dist-xen && \
+                make -j$(nproc) dist-tools && \
+                sudo make -j$(nproc) install-xen && \
+                sudo make -j$(nproc) install-tools && \
+                mkdir -p dist/install/etc/ld.so.conf.d/ && \
+                echo "/usr/local/lib" > dist/install/etc/ld.so.conf.d/xen.conf && \
+                cp xen/tools/misc/xen-vmtrace dist/install/usr/local/sbin && \
+                mkdir -p /xen-debs/ && \
+                  make -j$(nproc) debball && \
+                  mv dist/*.deb /xen-debs/ &&  \
+                  popd
             if [ $(ls -A "/xen-debs/" | wc -l) -eq 0 ]; then \
                 echo "No deb files found in /xen-debs/, Xen build failed!"; \
                 exit 1; \
@@ -209,20 +211,22 @@ jobs:
                 exit 1
             fi
 
-            autoreconf -vif libvmi && \
-                libvmi/configure --disable-kvm --disable-file --disable-bareflank \
+            pushd libvmi && \
+                autoreconf -vif && \
+                ./configure --disable-kvm --disable-file --disable-bareflank \
                     --disable-vmifs --prefix=/output/ && \
-                make -C libvmi -j$(nproc) && \
-                make -C libvmi install
+                make -j$(nproc) && \
+                sudo make install && \
+                popd
             if [ ! -f "/output/lib/libvmi.a" ]; then
                 echo "No file libvmi.a found, libvmi build failed!"
                 exit 1
             fi
 
-            autoreconf -vif . && \
+            autoreconf -vif && \
                 ./configure --prefix=/output/ && \
                 make -j$(nproc) && \
-                make install
+                sudo make install
 
             if [ ! -f "/output/bin/kfx" ]; then
                 echo "No file kfx found, KF/x build failed!"
